# IUAVC-Positioning-Challenge

./: .gitignore  CMakeLists.txt  README.md  package.xml  refree.sh  refree_auto.sh  refree_docker_auto.sh
GroundTruth/: seq1_gt.tum  seq1_gt.txt  seq2_gt.tum  seq2_gt.txt  seq3_gt.tum  seq4_gt.tum  seq5_gt.tum  seq6_gt.tum
config/: settings.json
dataset/: download_dataset_here.txt
doc/: april_6x6.yaml
ground_truth/: IntelligentUAV2023_seq1.tum  IntelligentUAV2023_seq2.tum  IntelligentUAV2023_seq3.tum  IntelligentUAV2023_seq4.tum  IntelligentUAV2023_seq5.tum
include/: JsonInterface.h  Judgement.h
launch/: refree.launch
result/fastvio/seq1/: fastvio_result.json  fastvio_result_traj.tum
result/fastvio/seq3/: fastvio_result.json  fastvio_result_traj.tum
result/orb/seq1/: orb_result.json
result/sjtu/seq1/: sjtu_result.json  sjtu_result_traj.tum
result/sjtu/seq3/: sjtu_result.json  sjtu_result_traj.tum
result/sjtu_stereo/seq1/: sjtu_stereo_result.json  sjtu_stereo_result_traj.tum
result/sjtu_stereo/seq3/: sjtu_stereo_result.json
src/: JsonInterface.cpp  Judgement.cpp  judgement_node.cpp  simplayer_node.cpp
tools/: ResultUpdater.py  convertbag.py  evo_stage4.py  start_judge.sh  start_roscore.sh  update_and_run.py
